[gd_scene load_steps=13 format=3 uid="uid://s6sh8rnfc3ba"]

[ext_resource type="Texture2D" uid="uid://qsfgi6k56r7h" path="res://assets/sprites/entities/player_body.png" id="1_8jowa"]
[ext_resource type="Script" path="res://src/entities/player_controller.gd" id="1_ruo61"]
[ext_resource type="Texture2D" uid="uid://dw0irexgxuf6r" path="res://assets/sprites/entities/player_eyes.png" id="2_hehrh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yt0kq"]
size = Vector2(30, 31)

[sub_resource type="Animation" id="Animation_868we"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_14fy6"]
resource_name = "blink"
length = 2.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Eyes:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 5, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_kpsqs"]
resource_name = "idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nkvjh"]
resource_name = "look_down"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Eyes:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_i7r6r"]
resource_name = "look_up"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Eyes:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_gpxnb"]
resource_name = "move"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fvlew"]
resource_name = "wall_slide"
length = 0.3
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 3, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12q7j"]
_data = {
"RESET": SubResource("Animation_868we"),
"blink": SubResource("Animation_14fy6"),
"idle": SubResource("Animation_kpsqs"),
"look_down": SubResource("Animation_nkvjh"),
"look_up": SubResource("Animation_i7r6r"),
"move": SubResource("Animation_gpxnb"),
"wall_slide": SubResource("Animation_fvlew")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 61
script = ExtResource("1_ruo61")

[node name="Sprites" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="Sprites"]
texture = ExtResource("1_8jowa")
hframes = 4

[node name="Eyes" type="Sprite2D" parent="Sprites"]
texture = ExtResource("2_hehrh")
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_yt0kq")

[node name="AnimationPlayerBody" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_12q7j")
}

[node name="AnimationPlayerEyes" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_12q7j")
}

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = 360
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_top_margin = 0.3

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayFloor" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, 20)
collision_mask = 32

[node name="RayWall" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, -10)
target_position = Vector2(16, 0)

[node name="RayConveyor" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, -5)
target_position = Vector2(16, 0)
collision_mask = 16
